Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5335

Memory leak in ep-engine make test

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 2.0-beta, 2.0
    • 2.0
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      Ep_testsuite does not destruct mccouch mock server at individual testcase cleanup time, and this would cause resource leak incl. memory and socket. With randomized mock server failure testing, the resource leak would eventually cause socket errors and all subsequent tests to die.

      Attachments

        For Gerrit Dashboard: MB-5335
        # Subject Branch Project Status CR V

        Activity

          People

            liang Liang Guo (Inactive)
            liang Liang Guo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty