MB-5335 Free mccouch mock server at end of unit test run

Mock server instance was not released at the end of each unit test
run. The resource leak would cause test failure symptoms when
randomized mock server failure testing is enabled.

Change-Id: I203f8ce1f6556cfef2896639c8e8227774f9a678
Reviewed-on: http://review.couchbase.org/16300
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>